{
  "version": 4,
  "terraform_version": "0.14.8",
  "serial": 119,
  "lineage": "5ef9cf35-3cf6-aa85-ce5b-71bbb3162992",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:407741403439:loadbalancer/tf-lb-20210324164847068200000001",
            "availability_zones": [
              "us-east-2b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "tf-lb-20210324164847068200000001-725054307.us-east-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "tf-lb-20210324164847068200000001",
            "idle_timeout": 60,
            "instances": [
              "i-05d5e06efe291df93",
              "i-0ed64dfafa836885c"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "tf-lb-20210324164847068200000001",
            "security_groups": [
              "sg-00f22964bcbe22a88"
            ],
            "source_security_group": "407741403439/elb_http",
            "source_security_group_id": "sg-00f22964bcbe22a88",
            "subnets": [
              "subnet-04d01f12bf1378fe6"
            ],
            "tags": {
              "Department": "CnA",
              "Project": "nginx via terraform"
            },
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.load_balancer_http_traffic",
            "aws_subnet.first_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-089c6f2e3866f0f14",
            "arn": "arn:aws:ec2:us-east-2:407741403439:instance/i-02b9fa37474e456ee",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02b9fa37474e456ee",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "140321",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a81881612f0b830f",
            "private_dns": "ip-172-31-28-123.us-east-2.compute.internal",
            "private_ip": "172.31.28.123",
            "public_dns": "ec2-3-15-234-84.us-east-2.compute.amazonaws.com",
            "public_ip": "3.15.234.84",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0695d45baf12f7ccf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-a55ab8d8",
            "tags": {
              "Department": "CnA",
              "Name": "terraform",
              "Project": "nginx via terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-f1847184"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:407741403439:internet-gateway/igw-0dce304a75db279fd",
            "id": "igw-0dce304a75db279fd",
            "owner_id": "407741403439",
            "tags": {
              "Department": "CnA",
              "Project": "nginx via terraform"
            },
            "vpc_id": "vpc-011594cd9c5ecc65b"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04e1246e0c34cb616",
            "owner_id": "407741403439",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dce304a75db279fd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Department": "CnA",
              "Project": "nginx via terraform"
            },
            "vpc_id": "vpc-011594cd9c5ecc65b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ps_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6925ef9171a1829",
            "route_table_id": "rtb-04e1246e0c34cb616",
            "subnet_id": "subnet-04d01f12bf1378fe6"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.route_table",
            "aws_subnet.first_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_instance_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:407741403439:security-group/sg-0cf308f63c5811d97",
            "description": "Allow inbound HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cf308f63c5811d97",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20210324155015785500000002",
            "name_prefix": "terraform-",
            "owner_id": "407741403439",
            "revoke_rules_on_delete": false,
            "tags": {
              "Department": "CnA",
              "Project": "nginx via terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-011594cd9c5ecc65b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_http_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:407741403439:security-group/sg-00f22964bcbe22a88",
            "description": "Allow HTTP traffic to ec2 instances trought ELB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00f22964bcbe22a88",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elb_http",
            "name_prefix": "",
            "owner_id": "407741403439",
            "revoke_rules_on_delete": false,
            "tags": {
              "Department": "CnA",
              "Project": "nginx via terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-011594cd9c5ecc65b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "first_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:407741403439:subnet/subnet-04d01f12bf1378fe6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.0.0/16",
            "id": "subnet-04d01f12bf1378fe6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "407741403439",
            "tags": {
              "Department": "CnA",
              "Project": "nginx via terraform"
            },
            "tags_all": {
              "Department": "CnA",
              "Project": "nginx via terraform"
            },
            "vpc_id": "vpc-011594cd9c5ecc65b"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:407741403439:vpc/vpc-011594cd9c5ecc65b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08bef3889896d8bdf",
            "default_route_table_id": "rtb-034e0f59796c3aae8",
            "default_security_group_id": "sg-08f555f54ada2aa7e",
            "dhcp_options_id": "dopt-09600162",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-011594cd9c5ecc65b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-034e0f59796c3aae8",
            "owner_id": "407741403439",
            "tags": {
              "Department": "CnA",
              "Project": "nginx via terraform"
            },
            "tags_all": {
              "Department": "CnA",
              "Project": "nginx via terraform"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}